
CREATE TABLE watch (
    friend DATE,
    meet TEXT,
    radio VARCHAR(50),
    PRIMARY KEY (friend),
    FOREIGN KEY (friend) REFERENCES identify(friend)
);

CREATE TABLE identify (
    never VARCHAR(50),
    person DATE,
    PRIMARY KEY (never),
    FOREIGN KEY (never) REFERENCES happy(never)
);

CREATE TABLE happy (
    rather DATE,
    speech TEXT,
    where VARCHAR(50),
    PRIMARY KEY (rather),
    FOREIGN KEY (rather) REFERENCES out(rather)
);

CREATE TABLE out (
    course VARCHAR(50),
    manager DATE,
    PRIMARY KEY (course),
    FOREIGN KEY (course) REFERENCES forward(course)
);

CREATE TABLE forward (
    recent DATE,
    weight TEXT,
    information VARCHAR(50),
    PRIMARY KEY (recent),
    FOREIGN KEY (recent) REFERENCES hit(recent)
);

CREATE TABLE hit (
    south VARCHAR(50),
    high DATE,
    PRIMARY KEY (south),
    FOREIGN KEY (south) REFERENCES arm(south)
);

CREATE TABLE arm (
    employee DATE,
    PM TEXT,
    mean VARCHAR(50),
    PRIMARY KEY (employee),
    FOREIGN KEY (employee) REFERENCES investment(employee)
);

CREATE TABLE investment (
    but VARCHAR(50),
    Congress DATE,
    PRIMARY KEY (but),
    FOREIGN KEY (but) REFERENCES watch(but)
);
