
CREATE TABLE public (
    record DATE,
    pass TEXT,
    table VARCHAR(50),
    PRIMARY KEY (record),
    FOREIGN KEY (record) REFERENCES half(record)
);

CREATE TABLE half (
    big VARCHAR(50),
    think DATE,
    PRIMARY KEY (big),
    FOREIGN KEY (big) REFERENCES finish(big)
);

CREATE TABLE finish (
    religious DATE,
    yes TEXT,
    million VARCHAR(50),
    PRIMARY KEY (religious),
    FOREIGN KEY (religious) REFERENCES upon(religious)
);

CREATE TABLE upon (
    message VARCHAR(50),
    what DATE,
    PRIMARY KEY (message),
    FOREIGN KEY (message) REFERENCES memory(message)
);

CREATE TABLE memory (
    data DATE,
    investment TEXT,
    sing VARCHAR(50),
    PRIMARY KEY (data),
    FOREIGN KEY (data) REFERENCES for(data)
);

CREATE TABLE for (
    term VARCHAR(50),
    wrong DATE,
    PRIMARY KEY (term),
    FOREIGN KEY (term) REFERENCES two(term)
);

CREATE TABLE two (
    brother DATE,
    campaign TEXT,
    glass VARCHAR(50),
    PRIMARY KEY (brother),
    FOREIGN KEY (brother) REFERENCES idea(brother)
);

CREATE TABLE idea (
    similar VARCHAR(50),
    job DATE,
    PRIMARY KEY (similar),
    FOREIGN KEY (similar) REFERENCES late(similar)
);

CREATE TABLE late (
    present DATE,
    production TEXT,
    billion VARCHAR(50),
    PRIMARY KEY (present),
    FOREIGN KEY (present) REFERENCES door(present)
);

CREATE TABLE door (
    anything VARCHAR(50),
    list DATE,
    PRIMARY KEY (anything),
    FOREIGN KEY (anything) REFERENCES public(anything)
);
