
CREATE TABLE about (
    seven DATE,
    fear TEXT,
    training VARCHAR(50),
    PRIMARY KEY (seven),
    FOREIGN KEY (seven) REFERENCES show(seven)
);

CREATE TABLE show (
    across VARCHAR(50),
    student DATE,
    PRIMARY KEY (across),
    FOREIGN KEY (across) REFERENCES involve(across)
);

CREATE TABLE involve (
    ever DATE,
    language TEXT,
    just VARCHAR(50),
    PRIMARY KEY (ever),
    FOREIGN KEY (ever) REFERENCES on(ever)
);

CREATE TABLE on (
    point VARCHAR(50),
    serious DATE,
    PRIMARY KEY (point),
    FOREIGN KEY (point) REFERENCES evidence(point)
);

CREATE TABLE evidence (
    style DATE,
    throw TEXT,
    after VARCHAR(50),
    PRIMARY KEY (style),
    FOREIGN KEY (style) REFERENCES leader(style)
);

CREATE TABLE leader (
    leader VARCHAR(50),
    him DATE,
    PRIMARY KEY (leader),
    FOREIGN KEY (leader) REFERENCES food(leader)
);

CREATE TABLE food (
    artist DATE,
    throughout TEXT,
    investment VARCHAR(50),
    PRIMARY KEY (artist),
    FOREIGN KEY (artist) REFERENCES drug(artist)
);

CREATE TABLE drug (
    order VARCHAR(50),
    certain DATE,
    PRIMARY KEY (order),
    FOREIGN KEY (order) REFERENCES school(order)
);

CREATE TABLE school (
    concern DATE,
    leader TEXT,
    adult VARCHAR(50),
    PRIMARY KEY (concern),
    FOREIGN KEY (concern) REFERENCES break(concern)
);

CREATE TABLE break (
    two VARCHAR(50),
    physical DATE,
    PRIMARY KEY (two),
    FOREIGN KEY (two) REFERENCES boy(two)
);

CREATE TABLE boy (
    collection DATE,
    me TEXT,
    debate VARCHAR(50),
    PRIMARY KEY (collection),
    FOREIGN KEY (collection) REFERENCES about(collection)
);
