erDiagram
    near ||--o{ away : tough
    near {
        DATE tough
        TEXT although
        VARCHAR(50) ahead
    }
    away ||--o{ card : table
    away {
        VARCHAR(50) table
        DATE enter
    }
    card ||--o{ possible : describe
    card {
        DATE describe
        TEXT conference
        VARCHAR(50) friend
    }
    possible ||--o{ two : while
    possible {
        VARCHAR(50) while
        DATE feel
    }
    two ||--o{ hospital : rule
    two {
        DATE rule
        TEXT character
        VARCHAR(50) garden
    }
    hospital ||--o{ great : thing
    hospital {
        VARCHAR(50) thing
        DATE eye
    }
    great ||--o{ happy : federal
    great {
        DATE federal
        TEXT almost
        VARCHAR(50) out
    }
    happy ||--o{ situation : partner
    happy {
        VARCHAR(50) partner
        DATE let
    }
    situation ||--o{ produce : near
    situation {
        DATE near
        TEXT man
        VARCHAR(50) billion
    }
    produce ||--o{ involve : the
    produce {
        VARCHAR(50) the
        DATE no
    }
    involve ||--o{ near : plan
    involve {
        DATE plan
        TEXT friend
        VARCHAR(50) group
    }